--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,9 @@
+v0.3
+- Localize the power draw to the current locale.
+- Detect BAT0/BAT1/BATT folder
+
 v0.2
-Use power_now if available, otherwise use current_now and voltage_now to calculate the power draw.
+- Use power_now if available, otherwise use current_now and voltage_now to calculate the power draw.
 
 v0.1
-First release of the project.
+- First release of the project.
