That would be it

--- a/po/ca.po
+++ b/po/ca.po
@@ -3,14 +3,13 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-09-24 16:29+0200\n"
 "PO-Revision-Date: 2024-09-24 16:30+0200\n"
-"Last-Translator: \n"
+"Last-Translator: Marc Salat\n"
 "Language-Team: \n"
 "Language: ca\n"
 "MIME-Version: 1.0\n"
