--- a/po/de.po
+++ b/po/de.po
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-06-26 12:03+0300\n"
 "PO-Revision-Date: 2024-09-24 18:10+0200\n"
-"Last-Translator: Uwe Senkler\n"
+"Last-Translator: Bernd Strobel\n"
 "Language-Team: \n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
@@ -35,8 +35,8 @@ msgstr "Aktualisierungsintervall"
 
 #: prefs.js:46
 msgid "Show 0.0W power"
-msgstr ""
+msgstr "Zeige 0.0W Leistungswerte an"
 
 #: prefs.js:47
 msgid "Show a 0.0W power value instead of hiding it."
-msgstr ""
+msgstr "Zeigt einen 0.0W Wert für die Leistung an, anstatt ihn auszublenden."
