--- a/po/de.po
+++ b/po/de.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-06-27 17:59+0300\n"
+"POT-Creation-Date: 2025-07-05 09:51+0200\n"
 "PO-Revision-Date: 2024-09-24 18:10+0200\n"
 "Last-Translator: Bernd Strobel\n"
 "Language-Team: \n"
@@ -17,7 +17,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 3.5\n"
 
-#: extension.js:61 prefs.js:20
+#: extension.js:63 prefs.js:20
 msgid "Preferences"
 msgstr "Einstellungen"
 
@@ -36,6 +36,17 @@ msgstr "Zeige 0.0W Leistungswerte an"
 #: prefs.js:47
 msgid "Show a 0.0W power value instead of hiding it."
 msgstr "Zeigt einen 0.0W Wert für die Leistung an, anstatt ihn auszublenden."
+
+#: prefs.js:55
+msgid "Enable debug logs in Gnome Shell log output"
+msgstr "Aktiviere die Ausgabe von Debuglogs in Gnome Shell Logs"
+
+#: prefs.js:56
+msgid ""
+"Enables debug logs for PowerTracker. The logs are output in the normal Gnome "
+"Shell log stream. On Ubuntu these logs can be looked at using the command "
+"'journalctl --user-unit org.gnome.Shell@wayland.service -f'."
+msgstr "Aktiviert die Debuglogs von PowerTracker. Diese Logausgaben werden in den normalen Gnome Shell Log ausgegeben. Unter Ubuntu können diese mit 'journalctl --user-unit org.gnome.Shell@wayland.service -f' angesehen werden."
 
 #~ msgid "PowerTracker"
 #~ msgstr "PowerTracker"
