--- a/po/ca.po
+++ b/po/ca.po
@@ -31,11 +31,11 @@ msgstr "Taxa de refresc"
 
 #: prefs.js:46
 msgid "Show 0.0W power"
-msgstr ""
+msgstr "Mostra 0.0W"
 
 #: prefs.js:47
 msgid "Show a 0.0W power value instead of hiding it."
-msgstr ""
+msgstr "Mostra 0.0W en comptes d'amagar-lo"
 
 #: prefs.js:55
 msgid "Enable debug logs in Gnome Shell log output"
