--- a/po/de.po
+++ b/po/de.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-07-05 09:51+0200\n"
-"PO-Revision-Date: 2024-09-24 18:10+0200\n"
+"PO-Revision-Date: 2025-11-29 18:34+0100\n"
 "Last-Translator: Bernd Strobel\n"
 "Language-Team: \n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 3.5\n"
+"X-Generator: Poedit 3.8\n"
 
 #: extension.js:63 prefs.js:20
 msgid "Preferences"
@@ -31,22 +31,21 @@ msgstr "Aktualisierungsintervall"
 
 #: prefs.js:46
 msgid "Show 0.0W power"
-msgstr "Zeige 0.0W Leistungswerte an"
+msgstr "Leistungswert »0.0W« anzeigen"
 
 #: prefs.js:47
 msgid "Show a 0.0W power value instead of hiding it."
-msgstr "Zeigt einen 0.0W Wert für die Leistung an, anstatt ihn auszublenden."
+msgstr "Zeigt den Wert »0.0W« für die Leistung an, anstatt ihn auszublenden."
 
 #: prefs.js:55
 msgid "Enable debug logs in Gnome Shell log output"
-msgstr "Aktiviere die Ausgabe von Debuglogs in Gnome Shell Logs"
+msgstr "Ausgabe von Fehlermeldungen im Gnome-Shell-Protokoll aktivieren"
 
 #: prefs.js:56
-msgid ""
-"Enables debug logs for PowerTracker. The logs are output in the normal Gnome "
-"Shell log stream. On Ubuntu these logs can be looked at using the command "
-"'journalctl --user-unit org.gnome.Shell@wayland.service -f'."
-msgstr "Aktiviert die Debuglogs von PowerTracker. Diese Logausgaben werden in den normalen Gnome Shell Log ausgegeben. Unter Ubuntu können diese mit 'journalctl --user-unit org.gnome.Shell@wayland.service -f' angesehen werden."
+msgid "Enables debug logs for PowerTracker. The logs are output in the normal Gnome Shell log stream. On Ubuntu these logs can be looked at using the command 'journalctl --user-unit org.gnome.Shell@wayland.service -f'."
+msgstr ""
+"Aktiviert die Fehlermeldungen von PowerTracker. Diese Protokollausgaben werden in den normalen Gnome-Shell-Protokollen ausgegeben. Unter Ubuntu können diese mit »journalctl --user-unit org.gnome.Shell@wayland.service -f« "
+"eingesehen werden."
 
 #~ msgid "PowerTracker"
 #~ msgstr "PowerTracker"
